# errnote

./: .gitignore  README.md  pyproject.toml
benchmarks/: run.py
src/agent_memory/: __init__.py  __main__.py  cli.py  core.py  mcp_server.py  store.py
tests/: test_smoke.py
